tests/fail/provenance/ptr_invalid_offset.stderr
error: Undefined Behavior: pointer arithmetic failed: $HEX is not a valid pointer
  --> RUSTLIB/core/src/ptr/const_ptr.rs:LL:CC
   |
LL |         unsafe { intrinsics::offset(self, count) }
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ pointer arithmetic failed: $HEX is not a valid pointer
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
   = note: backtrace:
   = note: inside `std::ptr::const_ptr::<impl *const u8>::offset` at RUSTLIB/core/src/ptr/const_ptr.rs:LL:CC
note: inside `main` at $DIR/ptr_invalid_offset.rs:LL:CC
  --> $DIR/ptr_invalid_offset.rs:LL:CC
   |
LL |     let _ = unsafe { roundtrip.offset(1) };
   |                      ^^^^^^^^^^^^^^^^^^^

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

